Logic to Render data in table Utils file

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                 <td>Age</td>
             </tr>
         </thead>
-        <tbody data-sink>
+        <tbody data-sink="tableBody">
             <tr>
                 <td></td>
                 <td></td>
@@ -51,9 +51,9 @@
     </table>
 
     <div class="btn-group">
-        <button data-prevbtn>Previous</button>
-        <button data-nextbtn>Next</button>
-        <label data-pageview></label>
+      <button data-prevbtn="prev-btn">Previous</button>
+      <button data-nextbtn="next-btn">Next</button>
+      <label data-pageview="page-view"></label>
     </div>
 
     <script type="module" src="app.ts"></script>
